<resources>
    <string name="app_name" translatable="false">Privora Browser - Smart &amp; Safe</string>
    <string name="home_title" translatable="false">Privora Browser</string>
    <string name="tab_home">Home</string>
    <string name="tab_short">Short</string>
    <string name="tab_files">Files</string>
    <string name="tab_tabs">Tabs</string>
    <string name="tab_settings">Settings</string>
    <string name="home_search_text_hint">Search or enter web address</string>
    <string name="home_pdf_generation">PDF Generation</string>
    <string name="home_video_generation">Video Generation</string>
    <string name="clean">Clean</string>
    <string name="news">News</string>
    <string name="process">Process</string>
    <string name="speed">Speed</string>
    <string name="duplicate">Duplicate</string>
    <string name="similar">Similar</string>
    <string name="bookmark">Bookmark</string>
    <string name="search_keyword_cancel">Cancel</string>
    <string name="search_shortcut_www" translatable="false">www.</string>
    <string name="search_shortcut_m" translatable="false">m.</string>
    <string name="search_shortcut_wap" translatable="false">wap.</string>
    <string name="search_shortcut_dot" translatable="false">.</string>
    <string name="search_shortcut_slash" translatable="false">/</string>
    <string name="home_quick_remove_title">Remove Shortcut</string>
    <string name="tabs">Tabs</string>
    <string name="normal_tabs">Standard</string>
    <string name="private_tabs">Incognito</string>
    <string name="new_tab">New Tab</string>
    <string name="close_tab">Close Tab</string>
    <string name="close_all_tabs">Close All Tabs</string>
    <string name="tab_icon">Tab Icon</string>
    <string name="tab_thumbnail">Tab Thumbnail</string>
    <string name="no_tabs">No open tabs</string>
    <string name="tab_count">%d Tabs</string>
    <string name="empty_state_incognito">Incognito mode won\'t save your browsing history, but downloads and bookmarks will be saved.</string>
    <string name="tabs_clear_title">Close All Windows</string>
    <string name="tabs_clear_message">This will close all windows in the current mode (Downloads and bookmarks won\'t be affected). Continue?</string>
    <string name="tabs_clear_confirm">Close All</string>
    <string name="file_icon">File Icon</string>
    <string name="action_button">Action Button</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="download_started">Download started</string>
    <string name="download_view">View</string>
    <string name="download_complete">Download complete</string>
    <string name="download_paused">Paused</string>
    <string name="download_progress_percent">%1$d%%</string>
    <string name="download_unknown_file">Unknown file</string>
    <string name="download_empty_state">No download history</string>
    <string name="download_guide_download_video">How to download videos?</string>
    <string name="bookmark_root_title">Bookmarks</string>
    <string name="bookmark_action_back">Back</string>
    <string name="bookmark_tab_bookmarks">Bookmarks</string>
    <string name="bookmark_tab_history">History</string>
    <string name="bookmark_history_placeholder">History feature coming soon</string>
    <string name="bookmark_search_hint">Search bookmarks</string>
    <string name="bookmark_clear_search">Clear search</string>
    <string name="bookmark_empty_state">No bookmarks yet</string>
    <string name="bookmark_item_icon">Bookmark Icon</string>
    <string name="bookmark_action_more">More</string>
    <string name="bookmark_add_folder">New Folder</string>
    <string name="bookmark_add_folder_hint">Enter folder name</string>
    <string name="bookmark_add_folder_empty">Folder name cannot be empty</string>
    <string name="bookmark_folder_created">Folder created</string>
    <string name="bookmark_dialog_confirm">Confirm</string>
    <string name="bookmark_dialog_cancel">Cancel</string>
    <string name="bookmark_dialog_title_add">Add Bookmark</string>
    <string name="bookmark_dialog_title_edit">Edit Bookmark</string>
    <string name="bookmark_dialog_field_title">Title</string>
    <string name="bookmark_dialog_field_url">URL</string>
    <string name="bookmark_dialog_field_folder">Select Folder</string>
    <string name="bookmark_dialog_error_title_empty">Title cannot be empty</string>
    <string name="bookmark_dialog_error_url_empty">URL cannot be empty</string>
    <string name="bookmark_added">Added to bookmarks</string>
    <string name="bookmark_already_exists">URL already in bookmarks</string>
    <string name="bookmark_add_failed">Failed to add bookmark</string>
    <string name="bookmark_updated">Bookmark updated</string>
    <string name="bookmark_update_failed">Failed to update bookmark</string>
    <string name="bookmark_deleted">Bookmark deleted</string>
    <string name="bookmark_delete_failed">Failed to delete bookmark</string>
    <string name="bookmark_menu_open_bookmarks">Bookmarks</string>
    <string name="bookmark_menu_open_history">History</string>
    <string name="bookmark_menu_share">Share</string>
    <string name="bookmark_menu_add_bookmark">Bookmark</string>
    <string name="bookmark_menu_added_state">Bookmarked</string>
    <string name="bookmark_menu_cancel">Cancel</string>
    <string name="web_menu_back">Back</string>
    <string name="web_menu_forward">Forward</string>
    <string name="web_menu_share">Share</string>
    <string name="web_menu_refresh">Refresh</string>
    <string name="web_menu_new_tab">New Tab</string>
    <string name="web_menu_bookmarks">Bookmarks</string>
    <string name="web_menu_add">Add</string>
    <string name="web_menu_history">History</string>
    <string name="web_menu_downloads">Downloads</string>
    <string name="web_menu_find_in_page">Find in page</string>
    <string name="web_menu_desktop_site">Desktop site</string>
    <string name="web_menu_add_to_home">Add to Home Screen</string>
    <string name="web_shortcut_url_empty">URL is empty</string>
    <string name="web_shortcut_not_supported">Launcher does not support shortcuts</string>
    <string name="web_shortcut_adding">Adding to Home Screen</string>
    <string name="web_shortcut_added">Added to Home Screen</string>
    <string name="web_share_url_empty">Cannot share empty URL</string>
    <string name="bookmark_action_open">Open</string>
    <string name="bookmark_action_edit">Edit</string>
    <string name="bookmark_action_move">Move</string>
    <string name="bookmark_action_delete">Delete</string>
    <string name="bookmark_action_rename">Rename</string>
    <string name="bookmark_confirm_delete">Delete?</string>
    <string name="bookmark_confirm_delete_site_message">Delete this bookmark?</string>
    <string name="bookmark_confirm_delete_folder_message">Delete this folder and all its contents?</string>
    <string name="bookmark_folder_renamed">Folder renamed</string>
    <string name="bookmark_folder_rename_failed">Failed to rename folder</string>
    <string name="bookmark_folder_moved">Folder moved</string>
    <string name="bookmark_folder_move_failed">Failed to move folder</string>
    <string name="bookmark_folder_deleted">Folder deleted</string>
    <string name="bookmark_folder_delete_failed">Failed to delete folder</string>
    <string name="bookmark_move_success">Bookmark moved</string>
    <string name="bookmark_move_failed">Failed to move bookmark</string>
    <string name="bookmark_edit_title_add">Add Bookmark</string>
    <string name="bookmark_edit_title_edit">Edit Bookmark</string>
    <string name="bookmark_folder_edit_title_add">New Folder</string>
    <string name="bookmark_folder_edit_title_edit">Edit Folder</string>
    <string name="bookmark_select_folder_title">Select Folder</string>
    <string name="bookmark_root_directory">Root</string>
    <string name="bookmark_parent_folder">Parent Folder</string>
    <string name="bookmark_button_save">Save</string>
    <string name="bookmark_button_done">Done</string>
    <string name="bookmark_add_to_shortcuts">Add to shortcuts</string>
    <string name="history_search_hint">Search history</string>
    <string name="history_clear_search">Clear search</string>
    <string name="history_empty_state">No history yet</string>
    <string name="history_item_icon">History Icon</string>
    <string name="history_header_today">Today</string>
    <string name="history_header_yesterday">Yesterday</string>
    <string name="history_clear_title">Clear History</string>
    <string name="history_clear_message">Delete all browsing history?</string>
    <string name="history_clear_confirm">Clear</string>
    <string name="history_cleared">History cleared</string>
    <string name="history_delete_title">Delete History</string>
    <string name="history_delete_message">Delete this item?</string>
    <string name="history_delete_confirm">Delete</string>
    <string name="history_deleted">History deleted</string>
    <string name="history_delete_failed">Delete failed</string>
    <string name="history_bookmark_added">Added to bookmarks</string>
    <string name="history_bookmark_failed">Failed to add bookmark</string>
    <string name="home_quick_section_title">Favorites</string>
    <string name="home_quick_add">Add</string>
    <string name="home_redesign_quick_access">Quick access</string>
    <string name="home_quick_remove_confirm">Remove this favorite?</string>
    <string name="home_quick_remove">Remove</string>
    <string name="home_quick_cancel">Cancel</string>
    <string name="home_quick_added">Added to favorites</string>
    <string name="home_quick_already_exists">Already in favorites</string>
    <string name="recommended_title">Web Store</string>
    <string name="recommended_action_close">Close</string>
    <string name="recommended_section_social">Social</string>
    <string name="recommended_section_video">Video</string>
    <string name="recommended_section_news">News</string>
    <string name="recommended_section_tools">Tools</string>
    <string name="recommended_section_entertainment">Entertainment</string>
    <string name="recommended_section_music">Music</string>
    <string name="recommended_section_shopping">Shopping</string>
    <string name="recommended_section_sport">Sports</string>
    <string name="recommended_section_travel">Travel</string>
    <string name="recommended_section_healthy">Health</string>
    <string name="recommended_item_add">Add</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="more">More</string>
    <string name="storage_permission_dialog_title">Enable storage permission</string>
    <string name="storage_permission_dialog_desc">To use this feature, please enable storage permission for Privora Browser in your phone settings.</string>
    <string name="storage_permission_dialog_item">Enable storage permission</string>
    <string name="storage_permission_dialog_later">Later</string>
    <string name="storage_permission_dialog_go_now">Go Now</string>
    <string name="uninstall_btn_stay">Don\'t uninstall yet</string>
    <string name="uninstall_btn_uninstall">Uninstall</string>
    <string name="uninstall_confirm_title">Why uninstall Privora Browser?</string>
    <string name="uninstall_reason_difficult">Difficult to use</string>
    <string name="uninstall_reason_ads">Too many ads</string>
    <string name="uninstall_reason_cant_find">Can\'t find deleted photos</string>
    <string name="uninstall_reason_not_restore">Doesn\'t correctly restore the desired image</string>
    <string name="uninstall_reason_recovery">Difficulty in recovering other files</string>
    <string name="uninstall_reason_others">Others</string>
    <string name="uninstall_reason_hint">Please enter the reason why you uninstalling Privora Browser</string>
</resources>