<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp">

        <LinearLayout
            android:id="@+id/actionClean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@mipmap/ic_home_clean" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/clean"
                android:textColor="#626469"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@mipmap/ic_home_news" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/news"
                android:textColor="#626469"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@mipmap/ic_home_speed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/speed"
                android:textColor="#626469"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionProcess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@mipmap/ic_home_process" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/process"
                android:textColor="#626469"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp">

        <LinearLayout
            android:id="@+id/actionBookmark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@mipmap/ic_home_bookmark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bookmark"
                android:textColor="#626469"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionDuplicate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@mipmap/ic_home_duplicate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/duplicate"
                android:textColor="#626469"
                android:textSize="14sp" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2" />

    </LinearLayout>

    <com.hjq.shape.layout.ShapeLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingStart="9dp"
        android:paddingTop="18dp"
        android:paddingEnd="9dp"
        android:paddingBottom="18dp"
        app:shape_radius="16dp"
        app:shape_solidColor="@color/white">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_redesign_quick_access"
                android:textColor="@color/black_333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/bookmark_action_edit"
                android:textColor="#5C96FB"
                android:textSize="14sp" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQuickAccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:nestedScrollingEnabled="false" />

    </com.hjq.shape.layout.ShapeLinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@color/black_333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/more"
            android:textColor="#5C96FB"
            android:textSize="14sp" />

    </FrameLayout>

</LinearLayout>
